# basescope

./: .env.example  AGENTS.md  Cargo.toml  README.md
src/: domain.rs  error.rs  main.rs
src/analysis/: mod.rs
src/cache/: mod.rs
src/pipeline/: mod.rs
src/rpc/: mod.rs
src/tui/: events.rs  log_layer.rs  mod.rs  render.rs
src/tui/render/: charts.rs  colors.rs  histogram.rs  input.rs  mod.rs  panels.rs  sidebar.rs
