[package]
name = "basescope"
version = "0.1.0"
edition = "2024"

[features]
default = ["export"]
export = ["dep:plotters"]

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "ttf", "line_series", "histogram"], optional = true }
alloy = { version = "1", features = ["full"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
parking_lot = "0.12"
dotenvy = "0.15.7"
libc = "0.2"
zstd = "0.13"
